:wheelchair: Fix contrast ratio send button
Improve the color contrast for the send button.

--- a/src/style.css
+++ b/src/style.css
@@ -166,7 +166,7 @@ form button {
   appearance: none;
   background-color: transparent;
   border: 0;
-  color: #60b0e8;
+  color: #e30111;
   text-transform: uppercase;
   font-weight: 500;
   font-size: inherit;
